VuoGenerateModulePCH(VuoModulePCH
	SOURCES
		node.h
		../type/type.h
)

add_subdirectory(vuo.app)
add_subdirectory(vuo.audio)
add_subdirectory(vuo.bcf2000)
add_subdirectory(vuo.color)
add_subdirectory(vuo.console)
add_subdirectory(vuo.data)
add_subdirectory(vuo.dictionary)
add_subdirectory(vuo.event)
add_subdirectory(vuo.file)
add_subdirectory(vuo.font)
add_subdirectory(vuo.hid)
add_subdirectory(vuo.image)
add_subdirectory(vuo.keyboard)
add_subdirectory(vuo.kinect)
add_subdirectory(vuo.layer)
add_subdirectory(vuo.leap)
add_subdirectory(vuo.list)
add_subdirectory(vuo.logic)
add_subdirectory(vuo.math)
add_subdirectory(vuo.mesh)
add_subdirectory(vuo.midi)
add_subdirectory(vuo.motion)
add_subdirectory(vuo.mouse)
add_subdirectory(vuo.noise)
add_subdirectory(vuo.osc)
add_subdirectory(vuo.point)
add_subdirectory(vuo.quaternion)
add_subdirectory(vuo.rectangle)
add_subdirectory(vuo.rss)
add_subdirectory(vuo.scene)
add_subdirectory(vuo.screen)
add_subdirectory(vuo.select)
add_subdirectory(vuo.serial)
add_subdirectory(vuo.shader)
add_subdirectory(vuo.syphon)
add_subdirectory(vuo.table)
add_subdirectory(vuo.text)
add_subdirectory(vuo.time)
add_subdirectory(vuo.transform)
add_subdirectory(vuo.tree)
add_subdirectory(vuo.type)
add_subdirectory(vuo.ui)
add_subdirectory(vuo.url)
add_subdirectory(vuo.video)
add_subdirectory(vuo.window)
if (VuoPro)
	include(pro/pro.cmake)
endif()
